Fix animating to search by peer when collapsed sidebar Improve search messages flickering

--- a/src/scss/partials/_chatlist.scss
+++ b/src/scss/partials/_chatlist.scss
@@ -88,6 +88,24 @@
       margin-bottom: 0;
     }
 
+    &.is-hidden {
+      opacity: 0;
+    }
+
+    &.is-visible {
+      &:not(.backwards) {
+        opacity: 1;
+      }
+
+      &.animating {
+        transition: opacity var(--transition-standard-in);
+
+        &.backwards {
+          transition: opacity var(--transition-standard-out);
+        }
+      }
+    }
+
     &__name {
       color: var(--secondary-text-color);
       padding: 0 23px;
